# coalescence

./: CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake  coalesce
inputs/: input.json
mod/: constants.mod  gen_lists.mod  ioutils.mod  lists.mod  str_lists.mod
src/: globals.f90  in_out.f90  integration.f90  list.f90  main.f90  model.f90
